src/grammar/CQLParser.js
// Generated from src/grammar/CQL.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var CQLListener = require('./CQLListener').CQLListener;
var grammarFileName = 'CQL.g4';


var symbolicNames = [
  null,
  null,
  null,
  null,
  null,
  'EQUALS',
  'BOOLEAN_OPERATOR',
  'PROX_OPERATOR',
  'RELATION_OPERATOR',
  'ANY',
  'ALL',
  'WITHIN',
  'VALUE',
  'SLASH_VALUE',
  'QUOTED',
  'INDEX',
  'SAME_RELATION',
  'HIGH_RELATION',
  'LOW_RELATION',
  'AND',
  'OR',
  'NOT',
  'PROX',
  'LETTER',
  'WS'
];

var ruleNames = [
  'parse',
  'sortClause',
  'statement',
  'operand_2',
  'operand',
  'parStatement',
  'proxOperand',
  'booleanOperator',
  'proxOperator',
  'modifier',
  'value',
  'index',
  'operator'
];

function CQLParser(input) {
  antlr4.Parser.call(this, input);
  this._interp = new antlr4.atn.ParserATNSimulator(
    this,
    atn,
    decisionsToDFA,
    sharedContextCache
  );
  this.ruleNames = ruleNames;
  this.literalNames = literalNames;
  this.symbolicNames = symbolicNames;
  return this;
}

CQLParser.prototype = Object.create(antlr4.Parser.prototype);
CQLParser.prototype.constructor = CQLParser;

Object.defineProperty(CQLParser.prototype, 'atn', {
  get: function() {
    return atn;
  }
});

CQLParser.EOF = antlr4.Token.EOF;
CQLParser.T__0 = 1;
CQLParser.T__1 = 2;
CQLParser.T__2 = 3;
CQLParser.T__3 = 4;
CQLParser.EQUALS = 5;
CQLParser.BOOLEAN_OPERATOR = 6;
CQLParser.PROX_OPERATOR = 7;
CQLParser.RELATION_OPERATOR = 8;
CQLParser.ANY = 9;
CQLParser.ALL = 10;
CQLParser.WITHIN = 11;
CQLParser.VALUE = 12;
CQLParser.SLASH_VALUE = 13;
CQLParser.QUOTED = 14;
CQLParser.INDEX = 15;
CQLParser.SAME_RELATION = 16;
CQLParser.HIGH_RELATION = 17;
CQLParser.LOW_RELATION = 18;
CQLParser.AND = 19;
CQLParser.OR = 20;
CQLParser.NOT = 21;
CQLParser.PROX = 22;
CQLParser.LETTER = 23;
CQLParser.WS = 24;

CQLParser.RULE_parse = 0;
CQLParser.RULE_sortClause = 1;
CQLParser.RULE_statement = 2;
CQLParser.RULE_operand_2 = 3;
CQLParser.RULE_operand = 4;
CQLParser.RULE_parStatement = 5;
CQLParser.RULE_proxOperand = 6;
CQLParser.RULE_booleanOperator = 7;
CQLParser.RULE_proxOperator = 8;
CQLParser.RULE_modifier = 9;
CQLParser.RULE_value = 10;
CQLParser.RULE_index = 11;
CQLParser.RULE_operator = 12;

function ParseContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = CQLParser.RULE_parse;
  return this;
}

ParseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParseContext.prototype.constructor = ParseContext;

ParseContext.prototype.statement = function() {
  return this.getTypedRuleContext(StatementContext, 0);
};

ParseContext.prototype.EOF = function() {
  return this.getToken(CQLParser.EOF, 0);
};

ParseContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterParse(this);
  }
};

ParseContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitParse(this);
  }
};

CQLParser.ParseContext = ParseContext;

CQLParser.prototype.parse = function() {
  var localctx = new ParseContext(this, this._ctx, this.state);
  this.enterRule(localctx, 0, CQLParser.RULE_parse);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 26;
    this.statement(0);
    this.state = 27;
    this.match(CQLParser.EOF);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function SortClauseContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = CQLParser.RULE_sortClause;
  return this;
}

SortClauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SortClauseContext.prototype.constructor = SortClauseContext;

SortClauseContext.prototype.index = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(IndexContext);
  } else {
    return this.getTypedRuleContext(IndexContext, i);
  }
};

SortClauseContext.prototype.modifier = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ModifierContext);
  } else {
    return this.getTypedRuleContext(ModifierContext, i);
  }
};

SortClauseContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterSortClause(this);
  }
};

SortClauseContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitSortClause(this);
  }
};

CQLParser.SortClauseContext = SortClauseContext;

CQLParser.prototype.sortClause = function() {
  var localctx = new SortClauseContext(this, this._ctx, this.state);
  this.enterRule(localctx, 2, CQLParser.RULE_sortClause);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 29;
    this.match(CQLParser.T__0);
    this.state = 33;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    do {
      this.state = 30;
      this.index();
      this.state = 31;
      this.modifier();
      this.state = 35;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    } while (_la === CQLParser.VALUE);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function StatementContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = CQLParser.RULE_statement;
  return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.operand_2 = function() {
  return this.getTypedRuleContext(Operand_2Context, 0);
};

StatementContext.prototype.proxOperand = function() {
  return this.getTypedRuleContext(ProxOperandContext, 0);
};

StatementContext.prototype.statement = function() {
  return this.getTypedRuleContext(StatementContext, 0);
};

StatementContext.prototype.booleanOperator = function() {
  return this.getTypedRuleContext(BooleanOperatorContext, 0);
};

StatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterStatement(this);
  }
};

StatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitStatement(this);
  }
};

CQLParser.prototype.statement = function(_p) {
  if (_p === undefined) {
    _p = 0;
  }
  var _parentctx = this._ctx;
  var _parentState = this.state;
  var localctx = new StatementContext(this, this._ctx, _parentState);
  var _prevctx = localctx;
  var _startState = 4;
  this.enterRecursionRule(localctx, 4, CQLParser.RULE_statement, _p);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 40;
    this._errHandler.sync(this);
    var la_ = this._interp.adaptivePredict(this._input, 1, this._ctx);
    switch (la_) {
      case 1:
        this.state = 38;
        this.operand_2();
        break;

      case 2:
        this.state = 39;
        this.proxOperand();
        break;
    }
    this._ctx.stop = this._input.LT(-1);
    this.state = 52;
    this._errHandler.sync(this);
    var _alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
    while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
      if (_alt === 1) {
        if (this._parseListeners !== null) {
          this.triggerExitRuleEvent();
        }
        _prevctx = localctx;
        this.state = 50;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input, 2, this._ctx);
        switch (la_) {
          case 1:
            localctx = new StatementContext(this, _parentctx, _parentState);
            this.pushNewRecursionContext(
              localctx,
              _startState,
              CQLParser.RULE_statement
            );
            this.state = 42;
            if (!this.precpred(this._ctx, 2)) {
              throw new antlr4.error.FailedPredicateException(
                this,
                'this.precpred(this._ctx, 2)'
              );
            }

            this.state = 43;
            this.booleanOperator();
            this.state = 44;
            this.proxOperand();
            break;

          case 2:
            localctx = new StatementContext(this, _parentctx, _parentState);
            this.pushNewRecursionContext(
              localctx,
              _startState,
              CQLParser.RULE_statement
            );
            this.state = 46;
            if (!this.precpred(this._ctx, 1)) {
              throw new antlr4.error.FailedPredicateException(
                this,
                'this.precpred(this._ctx, 1)'
              );
            }

            this.state = 47;
            this.booleanOperator();
            this.state = 48;
            this.operand_2();
            break;
        }
      }
      this.state = 54;
      this._errHandler.sync(this);
      _alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
    }
  } catch (error) {
    if (error instanceof antlr4.error.RecognitionException) {
      localctx.exception = error;
      this._errHandler.reportError(this, error);
      this._errHandler.recover(this, error);
    } else {
      throw error;
    }
  } finally {
    this.unrollRecursionContexts(_parentctx);
  }
  return localctx;
};

function Operand_2Context(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = CQLParser.RULE_operand_2;
  return this;
}

Operand_2Context.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Operand_2Context.prototype.constructor = Operand_2Context;

Operand_2Context.prototype.operand = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(OperandContext);
  } else {
    return this.getTypedRuleContext(OperandContext, i);
  }
};

Operand_2Context.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterOperand_2(this);
  }
};

Operand_2Context.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitOperand_2(this);
  }
};

CQLParser.Operand_2Context = Operand_2Context;

CQLParser.prototype.operand_2 = function() {
  var localctx = new Operand_2Context(this, this._ctx, this.state);
  this.enterRule(localctx, 6, CQLParser.RULE_operand_2);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 55;
    this.operand();
    this.state = 59;
    this._errHandler.sync(this);
    var _alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
    while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
      if (_alt === 1) {
        this.state = 56;
        this.operand();
      }
      this.state = 61;
      this._errHandler.sync(this);
      _alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function OperandContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = CQLParser.RULE_operand;
  return this;
}

OperandContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OperandContext.prototype.constructor = OperandContext;

OperandContext.prototype.copyFrom = function(ctx) {
  antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function WithinStatementContext(parser, ctx) {
  OperandContext.call(this, parser);
  this.op = null; // Token;
  OperandContext.prototype.copyFrom.call(this, ctx);
  return this;
}

WithinStatementContext.prototype = Object.create(OperandContext.prototype);
WithinStatementContext.prototype.constructor = WithinStatementContext;

CQLParser.WithinStatementContext = WithinStatementContext;

WithinStatementContext.prototype.index = function() {
  return this.getTypedRuleContext(IndexContext, 0);
};

WithinStatementContext.prototype.value = function() {
  return this.getTypedRuleContext(ValueContext, 0);
};

WithinStatementContext.prototype.WITHIN = function() {
  return this.getToken(CQLParser.WITHIN, 0);
};

WithinStatementContext.prototype.modifier = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ModifierContext);
  } else {
    return this.getTypedRuleContext(ModifierContext, i);
  }
};
WithinStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterWithinStatement(this);
  }
};

WithinStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitWithinStatement(this);
  }
};

function IndexStatementContext(parser, ctx) {
  OperandContext.call(this, parser);
  this.op = null; // Token;
  OperandContext.prototype.copyFrom.call(this, ctx);
  return this;
}

IndexStatementContext.prototype = Object.create(OperandContext.prototype);
IndexStatementContext.prototype.constructor = IndexStatementContext;

CQLParser.IndexStatementContext = IndexStatementContext;

IndexStatementContext.prototype.index = function() {
  return this.getTypedRuleContext(IndexContext, 0);
};

IndexStatementContext.prototype.value = function() {
  return this.getTypedRuleContext(ValueContext, 0);
};

IndexStatementContext.prototype.INDEX = function() {
  return this.getToken(CQLParser.INDEX, 0);
};
IndexStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterIndexStatement(this);
  }
};

IndexStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitIndexStatement(this);
  }
};

function ValueStatementContext(parser, ctx) {
  OperandContext.call(this, parser);
  OperandContext.prototype.copyFrom.call(this, ctx);
  return this;
}

ValueStatementContext.prototype = Object.create(OperandContext.prototype);
ValueStatementContext.prototype.constructor = ValueStatementContext;

CQLParser.ValueStatementContext = ValueStatementContext;

ValueStatementContext.prototype.value = function() {
  return this.getTypedRuleContext(ValueContext, 0);
};
ValueStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterValueStatement(this);
  }
};

ValueStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitValueStatement(this);
  }
};

function ParenthesisStatementContext(parser, ctx) {
  OperandContext.call(this, parser);
  OperandContext.prototype.copyFrom.call(this, ctx);
  return this;
}

ParenthesisStatementContext.prototype = Object.create(OperandContext.prototype);
ParenthesisStatementContext.prototype.constructor = ParenthesisStatementContext;

CQLParser.ParenthesisStatementContext = ParenthesisStatementContext;

ParenthesisStatementContext.prototype.parStatement = function() {
  return this.getTypedRuleContext(ParStatementContext, 0);
};
ParenthesisStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterParenthesisStatement(this);
  }
};

ParenthesisStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitParenthesisStatement(this);
  }
};

function AnyStatementContext(parser, ctx) {
  OperandContext.call(this, parser);
  this.op = null; // Token;
  OperandContext.prototype.copyFrom.call(this, ctx);
  return this;
}

AnyStatementContext.prototype = Object.create(OperandContext.prototype);
AnyStatementContext.prototype.constructor = AnyStatementContext;

CQLParser.AnyStatementContext = AnyStatementContext;

AnyStatementContext.prototype.index = function() {
  return this.getTypedRuleContext(IndexContext, 0);
};

AnyStatementContext.prototype.value = function() {
  return this.getTypedRuleContext(ValueContext, 0);
};

AnyStatementContext.prototype.ANY = function() {
  return this.getToken(CQLParser.ANY, 0);
};

AnyStatementContext.prototype.modifier = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ModifierContext);
  } else {
    return this.getTypedRuleContext(ModifierContext, i);
  }
};
AnyStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterAnyStatement(this);
  }
};

AnyStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitAnyStatement(this);
  }
};

function ProxStatementContext(parser, ctx) {
  OperandContext.call(this, parser);
  this.op = null; // Token;
  OperandContext.prototype.copyFrom.call(this, ctx);
  return this;
}

ProxStatementContext.prototype = Object.create(OperandContext.prototype);
ProxStatementContext.prototype.constructor = ProxStatementContext;

CQLParser.ProxStatementContext = ProxStatementContext;

ProxStatementContext.prototype.index = function() {
  return this.getTypedRuleContext(IndexContext, 0);
};

ProxStatementContext.prototype.proxOperand = function() {
  return this.getTypedRuleContext(ProxOperandContext, 0);
};

ProxStatementContext.prototype.EQUALS = function() {
  return this.getToken(CQLParser.EQUALS, 0);
};
ProxStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterProxStatement(this);
  }
};

ProxStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitProxStatement(this);
  }
};

function EqualsStatement_1Context(parser, ctx) {
  OperandContext.call(this, parser);
  this.op = null; // Token;
  OperandContext.prototype.copyFrom.call(this, ctx);
  return this;
}

EqualsStatement_1Context.prototype = Object.create(OperandContext.prototype);
EqualsStatement_1Context.prototype.constructor = EqualsStatement_1Context;

CQLParser.EqualsStatement_1Context = EqualsStatement_1Context;

EqualsStatement_1Context.prototype.index = function() {
  return this.getTypedRuleContext(IndexContext, 0);
};

EqualsStatement_1Context.prototype.parStatement = function() {
  return this.getTypedRuleContext(ParStatementContext, 0);
};

EqualsStatement_1Context.prototype.EQUALS = function() {
  return this.getToken(CQLParser.EQUALS, 0);
};
EqualsStatement_1Context.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterEqualsStatement_1(this);
  }
};

EqualsStatement_1Context.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitEqualsStatement_1(this);
  }
};

function RelationStatementContext(parser, ctx) {
  OperandContext.call(this, parser);
  this.op = null; // Token;
  OperandContext.prototype.copyFrom.call(this, ctx);
  return this;
}

RelationStatementContext.prototype = Object.create(OperandContext.prototype);
RelationStatementContext.prototype.constructor = RelationStatementContext;

CQLParser.RelationStatementContext = RelationStatementContext;

RelationStatementContext.prototype.index = function() {
  return this.getTypedRuleContext(IndexContext, 0);
};

RelationStatementContext.prototype.value = function() {
  return this.getTypedRuleContext(ValueContext, 0);
};

RelationStatementContext.prototype.RELATION_OPERATOR = function() {
  return this.getToken(CQLParser.RELATION_OPERATOR, 0);
};
RelationStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterRelationStatement(this);
  }
};

RelationStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitRelationStatement(this);
  }
};

function EqualsStatement_2Context(parser, ctx) {
  OperandContext.call(this, parser);
  this.op = null; // Token;
  OperandContext.prototype.copyFrom.call(this, ctx);
  return this;
}

EqualsStatement_2Context.prototype = Object.create(OperandContext.prototype);
EqualsStatement_2Context.prototype.constructor = EqualsStatement_2Context;

CQLParser.EqualsStatement_2Context = EqualsStatement_2Context;

EqualsStatement_2Context.prototype.index = function() {
  return this.getTypedRuleContext(IndexContext, 0);
};

EqualsStatement_2Context.prototype.value = function() {
  return this.getTypedRuleContext(ValueContext, 0);
};

EqualsStatement_2Context.prototype.EQUALS = function() {
  return this.getToken(CQLParser.EQUALS, 0);
};
EqualsStatement_2Context.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterEqualsStatement_2(this);
  }
};

EqualsStatement_2Context.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitEqualsStatement_2(this);
  }
};

function AllStatementContext(parser, ctx) {
  OperandContext.call(this, parser);
  this.op = null; // Token;
  OperandContext.prototype.copyFrom.call(this, ctx);
  return this;
}

AllStatementContext.prototype = Object.create(OperandContext.prototype);
AllStatementContext.prototype.constructor = AllStatementContext;

CQLParser.AllStatementContext = AllStatementContext;

AllStatementContext.prototype.index = function() {
  return this.getTypedRuleContext(IndexContext, 0);
};

AllStatementContext.prototype.value = function() {
  return this.getTypedRuleContext(ValueContext, 0);
};

AllStatementContext.prototype.ALL = function() {
  return this.getToken(CQLParser.ALL, 0);
};

AllStatementContext.prototype.modifier = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ModifierContext);
  } else {
    return this.getTypedRuleContext(ModifierContext, i);
  }
};
AllStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterAllStatement(this);
  }
};

AllStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitAllStatement(this);
  }
};

CQLParser.OperandContext = OperandContext;

CQLParser.prototype.operand = function() {
  var localctx = new OperandContext(this, this._ctx, this.state);
  this.enterRule(localctx, 8, CQLParser.RULE_operand);
  var _la = 0; // Token type
  try {
    this.state = 114;
    this._errHandler.sync(this);
    var la_ = this._interp.adaptivePredict(this._input, 8, this._ctx);
    switch (la_) {
      case 1:
        localctx = new ParenthesisStatementContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 62;
        this.parStatement();
        break;

      case 2:
        localctx = new ProxStatementContext(this, localctx);
        this.enterOuterAlt(localctx, 2);
        this.state = 63;
        this.index();
        this.state = 64;
        localctx.op = this.match(CQLParser.EQUALS);
        this.state = 65;
        this.proxOperand();
        break;

      case 3:
        localctx = new EqualsStatement_1Context(this, localctx);
        this.enterOuterAlt(localctx, 3);
        this.state = 67;
        this.index();
        this.state = 68;
        localctx.op = this.match(CQLParser.EQUALS);
        this.state = 69;
        this.parStatement();
        break;

      case 4:
        localctx = new AnyStatementContext(this, localctx);
        this.enterOuterAlt(localctx, 4);
        this.state = 71;
        this.index();
        this.state = 72;
        localctx.op = this.match(CQLParser.ANY);
        this.state = 76;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === CQLParser.SLASH_VALUE) {
          this.state = 73;
          this.modifier();
          this.state = 78;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 79;
        this.value();
        break;

      case 5:
        localctx = new AllStatementContext(this, localctx);
        this.enterOuterAlt(localctx, 5);
        this.state = 81;
        this.index();
        this.state = 82;
        localctx.op = this.match(CQLParser.ALL);
        this.state = 86;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === CQLParser.SLASH_VALUE) {
          this.state = 83;
          this.modifier();
          this.state = 88;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 89;
        this.value();
        break;

      case 6:
        localctx = new WithinStatementContext(this, localctx);
        this.enterOuterAlt(localctx, 6);
        this.state = 91;
        this.index();
        this.state = 92;
        localctx.op = this.match(CQLParser.WITHIN);
        this.state = 96;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === CQLParser.SLASH_VALUE) {
          this.state = 93;
          this.modifier();
          this.state = 98;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 99;
        this.value();
        break;

      case 7:
        localctx = new IndexStatementContext(this, localctx);
        this.enterOuterAlt(localctx, 7);
        this.state = 101;
        this.index();
        this.state = 102;
        localctx.op = this.match(CQLParser.INDEX);
        this.state = 103;
        this.value();
        break;

      case 8:
        localctx = new RelationStatementContext(this, localctx);
        this.enterOuterAlt(localctx, 8);
        this.state = 105;
        this.index();
        this.state = 106;
        localctx.op = this.match(CQLParser.RELATION_OPERATOR);
        this.state = 107;
        this.value();
        break;

      case 9:
        localctx = new EqualsStatement_2Context(this, localctx);
        this.enterOuterAlt(localctx, 9);
        this.state = 109;
        this.index();
        this.state = 110;
        localctx.op = this.match(CQLParser.EQUALS);
        this.state = 111;
        this.value();
        break;

      case 10:
        localctx = new ValueStatementContext(this, localctx);
        this.enterOuterAlt(localctx, 10);
        this.state = 113;
        this.value();
        break;
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function ParStatementContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = CQLParser.RULE_parStatement;
  return this;
}

ParStatementContext.prototype = Object.create(
  antlr4.ParserRuleContext.prototype
);
ParStatementContext.prototype.constructor = ParStatementContext;

ParStatementContext.prototype.statement = function() {
  return this.getTypedRuleContext(StatementContext, 0);
};

ParStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterParStatement(this);
  }
};

ParStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitParStatement(this);
  }
};

CQLParser.ParStatementContext = ParStatementContext;

CQLParser.prototype.parStatement = function() {
  var localctx = new ParStatementContext(this, this._ctx, this.state);
  this.enterRule(localctx, 10, CQLParser.RULE_parStatement);
  try {
    this.state = 122;
    this._errHandler.sync(this);
    var la_ = this._interp.adaptivePredict(this._input, 9, this._ctx);
    switch (la_) {
      case 1:
        this.enterOuterAlt(localctx, 1);
        this.state = 116;
        this.match(CQLParser.T__1);
        this.state = 117;
        this.statement(0);
        this.state = 118;
        this.match(CQLParser.T__2);
        break;

      case 2:
        this.enterOuterAlt(localctx, 2);
        this.state = 120;
        this.match(CQLParser.T__1);
        this.state = 121;
        this.match(CQLParser.T__2);
        break;
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function ProxOperandContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = CQLParser.RULE_proxOperand;
  return this;
}

ProxOperandContext.prototype = Object.create(
  antlr4.ParserRuleContext.prototype
);
ProxOperandContext.prototype.constructor = ProxOperandContext;

ProxOperandContext.prototype.proxOperand = function() {
  return this.getTypedRuleContext(ProxOperandContext, 0);
};

ProxOperandContext.prototype.value = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ValueContext);
  } else {
    return this.getTypedRuleContext(ValueContext, i);
  }
};

ProxOperandContext.prototype.proxOperator = function() {
  return this.getTypedRuleContext(ProxOperatorContext, 0);
};

ProxOperandContext.prototype.enterRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.enterProxOperand(this);
  }
};

ProxOperandContext.prototype.exitRule = function(listener) {
  if (listener instanceof CQLListener) {
    listener.exitProxOperand(this);
  }
};

CQLParser.ProxOperandContext = ProxOperandContext;
